--- a/templates/default/fulldoc/html/full_list_stepdefinitions.erb
+++ b/templates/default/fulldoc/html/full_list_stepdefinitions.erb
@@ -3,9 +3,9 @@
   <li class="r<%= n %>">
 	<span class='object_link'>
 		<span class="pre"><%= stepdef.predicate %></span>
-		<span class="name"><%= stepdef.value %></span>&nbsp;&nbsp;
+		<a href="steptransformers.html#<%= stepdef.name %>"><span class="name"><%= h(stepdef.value) %></span></a>&nbsp;&nbsp;
 	</span>
-	<span class="">(<%= "#{stepdef.files.first.first}:#{stepdef.files.first.last}" %>)<span>
+	<span class="">(<%= h("#{stepdef.files.first.first}:#{stepdef.files.first.last}") %>)<span>
   </li>
   <% n = n == 2 ? 1 : 2 %>
 <% end %>
