Step Definitions with Constants are again linked.  This time however, this operation is done in the parsing/handling operations and not during the displaying.

--- a/lib/yard/templates/default/fulldoc/html/full_list_stepdefinitions.erb
+++ b/lib/yard/templates/default/fulldoc/html/full_list_stepdefinitions.erb
@@ -2,7 +2,7 @@
 <% @step_definitions.each do |stepdef| %>
   <li class="r<%= n %>">
 	<span class='object_link'>
-		<span class="pre"><%= stepdef.predicate %></span>
+		<span class="pre"><%= stepdef.keyword %></span>
 		<a href="steptransformers.html#<%= stepdef.name %>"><span class="name"><%= h(stepdef.value) %></span></a>&nbsp;&nbsp;
 	</span>
 	<span class="">(<%= h("#{stepdef.files.first.first}:#{stepdef.files.first.last}") %>)<span>
