--- a/lib/yard/templates/default/scenario/html/scenario.erb
+++ b/lib/yard/templates/default/scenario/html/scenario.erb
@@ -17,7 +17,7 @@
 		<!-- TODO: Style the first word differently -->
 		<!-- TODO: Link the step to the step definition -->
 		<!-- TODO: Steps without links should appear different -->
-		<div class="step"><span class="predicate"><%= step.predicate %></span>&nbsp;<%= step.line %></div>
+		<div class="step"><span class="predicate"><%= step.keyword %></span>&nbsp;<%= step.line %></div>
 		<% end %>
 		<% else %>
 		<span>No Steps Defined</span>
