--- a/lib/yard/templates/default/steptransformers/html/stepdefinition.erb
+++ b/lib/yard/templates/default/steptransformers/html/stepdefinition.erb
@@ -10,7 +10,7 @@
 <div class="stepdef">
 	<a name="<%= stepdef.name %>">
 	<div class="title">
-		<span class="pre"><%= stepdef.predicate %></span>
+		<span class="pre"><%= stepdef.keyword %></span>
 		<span class="name"><%= stepdef.value %></span>
 		<div style="float: right;"><%= h( "#{stepdef.files.first.first}:#{stepdef.files.first.last}" ) %></div>
 	</div>
