-FIX full_list failed if it was empty -FIX step definitions list when its empty from breaking the rendering of the step_transformers page.

--- a/lib/yard/templates/default/steptransformers/html/stepdefinition.erb
+++ b/lib/yard/templates/default/steptransformers/html/stepdefinition.erb
@@ -4,7 +4,7 @@
 
 <div style="margin: 10px;">&nbsp;</div>
 
-
+<% if @step_transformers.definitions %>
 <% @step_transformers.definitions.each_with_index do |stepdef,index| %>
 
 <div class="stepdef">
@@ -35,4 +35,5 @@
 	</div>
 </div>
 
+<% end %>
 <% end %>
