(7rans requested) Step definitions to show their source code; required a better source definition to be stored during creation of the CodeObject

--- a/lib/yard/templates/default/fulldoc/html/css/common.css
+++ b/lib/yard/templates/default/fulldoc/html/css/common.css
@@ -174,7 +174,7 @@
 	border-bottom: 1px solid #E3E3E3;
 }
 
-.stepdef .steps {
+.stepdef .steps, .stepdef .source {
 	margin: 10px 0px 0px 30px;
 }
 .stepdef .steps .step {
