Scenario object has some helper methods to determine if it is a scenario and to return particular important from those sections Based on suggestions from lsegal I performed some clean up of the fulldoc setup.

--- a/lib/yard/templates/default/steptransformers/html/stepdefinition.erb
+++ b/lib/yard/templates/default/steptransformers/html/stepdefinition.erb
@@ -31,7 +31,7 @@
 	
 	<div class="source">
 		<span class="showSource">
-		[ <a href="#" class="toggleSource">Show source</a> ]	
+		[ <a href="#" class="toggleSource">View source</a> ]	
 		</span>
 		<table class="source_code">
 			<tr>
