--- a/lib/yard/templates/default/fulldoc/html/css/common.css
+++ b/lib/yard/templates/default/fulldoc/html/css/common.css
@@ -90,7 +90,7 @@
 
 .scenario .step, #background .step {
 	margin-top: 4px;
-        padding: 4px;
+	padding: 4px;
 	font-size: 14px;
 	font-weight: bold;
 }
@@ -135,8 +135,9 @@
 
 .text {
 	padding: 20px;
-	background-color: #F5F5F5;
-	color: #343332;
+	background-color: #F8F8FF;
+	color: #444444;
+	border: 1px solid #DEDEDE;
 }
 
 
@@ -144,6 +145,12 @@
 	margin-top: 20px;
 	margin-left: 40px;
 }
+.outline .keyword {
+	padding: 4px;
+	font-weight: bold;
+	font-size: 16px;
+}
+
 .multiline table tr, .outline table tr {
 	padding: 4px;
 }
@@ -153,8 +160,8 @@
 	background-color: #A8C0A8;
 }
 .multiline table tr td, .outline table tr td {
-	width: 150px;
-	padding: 4px;
+	min-width: 100px;
+	padding: 4px 10px 4px 10px;
 }
 
 
